--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,4 @@
+
 body {
     background-color: rgba(212, 243, 212, 0.6);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -23,4 +24,26 @@ p {
 }
 .page-h1 {
     color: green;
+}
+
+img {
+
+    width: 400px;
+    height: 300px;
+}
+
+@media screen and (max-width: 480px)
+{ 
+
+    body {
+        margin: 0;
+        border: none;
+        text-align: center;
+    }   
+
+    img {
+        width: 200px;
+        height: 150px;
+    }
+
 }
